# preco-teto-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/specs/: 2026-04-15-fii-ultimo-dividendo-design.md
docs/superpowers/plans/: 2026-03-24-preco-teto-v2.md  2026-03-25-fundos-analise-resumo.md  2026-03-25-fundos-benchmark-explicito.md  2026-03-25-fundos-br.md  2026-03-25-fundos-cdi-liquido.md  2026-03-25-fundos-progress-messages.md
docs/superpowers/specs/: 2026-03-24-preco-teto-v2-design.md  2026-03-25-fundos-analise-resumo-design.md  2026-03-25-fundos-benchmark-explicito-design.md  2026-03-25-fundosbr-design.md  2026-04-01-indicador-buffett-us-design.md
src/preco_teto/: cli.py  formulas.py
src/preco_teto/fundos/: cli.py  formulas.py  termometro.py
src/preco_teto/fundos/output/: tabela.py
src/preco_teto/fundos/services/: benchmark.py  cadastro.py  cotas.py
src/preco_teto/output/: json_out.py  plain.py  tabela.py
src/preco_teto/services/: acao.py  banco_central.py  etf.py  fii.py  referencia.py
src/radar/: cli.py
src/radar/output/: json_out.py  tabela.py
src/radar/services/: acao.py  fii.py  referencia.py  tesouro.py
tests/: conftest.py  test_acao.py  test_cli_main.py  test_etf.py  test_fii.py  test_formulas.py  test_referencia.py
tests/fundos/: test_benchmark.py  test_cadastro.py  test_cli.py  test_cotas.py  test_formulas.py  test_tabela.py  test_termometro.py
