[project]
name = "radar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "yfinance",
    "pandas",
    "scipy",
    "requests",
    "beautifulsoup4",
]

[project.scripts]
radar = "radar.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar"]

[dependency-groups]
dev = ["pytest", "pytest-mock"]
