[project]
name = "preco-teto"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "yfinance",
    "pandas",
    "scipy",
    "requests",
    "beautifulsoup4",
]

[project.scripts]
preco-teto = "preco_teto.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preco_teto"]

[dependency-groups]
dev = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
pythonpath = ["src"]
