[project]
name = "preco-teto"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "yfinance",
    "pandas",
    "scipy",
    "requests>=2.33.0",
    "beautifulsoup4",
    "python-dateutil",
    "pygments>=2.20.0",
]

[project.scripts]
preco-teto = "preco_teto.cli:app"
fundos-br  = "preco_teto.fundos.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preco_teto"]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-mock"]

[tool.pytest.ini_options]
pythonpath = ["src"]
